Fixed vertical alignment stuff.

--- a/main2.css
+++ b/main2.css
@@ -26,7 +26,9 @@
     color: white;
     font-family: kayak;
     text-align: center;
-    transform: translateY(50%);
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .left-side {
@@ -42,7 +44,6 @@
 }
 
 #toolbar {
-    position: static;
     width: 100%;
     height: 7%;
     background-color: floralwhite;
@@ -60,8 +61,9 @@
 }
 
 #chat-title-text {
-    padding-top: 12.5px;
-    height: 50px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 #text-area {
@@ -75,8 +77,9 @@
 }
 
 #code-choice {
-    padding-top: 12.5px;
-    padding-left: 5px;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 #message-field {
